# classy-patterns

./: CMakeLists.txt  README.md
include/: Patterns.hpp
source/: tests.cpp
